@@ -152,9 +152,11 @@ protected:
 	DECLARE_DYNTRANS_INSTR(add_u32_u32_immu32);
 	DECLARE_DYNTRANS_INSTR(add_u32_u32_u32);
 	DECLARE_DYNTRANS_INSTR(add_u64_u64_imms32_truncS32);
+	DECLARE_DYNTRANS_INSTR(add_u64_u64_u64_truncS32);
 	DECLARE_DYNTRANS_INSTR(add_u64_u64_imms32);
 	DECLARE_DYNTRANS_INSTR(sub_u32_u32_immu32);
 	DECLARE_DYNTRANS_INSTR(sub_u32_u32_u32);
+	DECLARE_DYNTRANS_INSTR(sub_u64_u64_u64_truncS32);
 
 	// Logic.
 	DECLARE_DYNTRANS_INSTR(and_u32_u32_immu32);
@@ -165,6 +167,7 @@ protected:
 	DECLARE_DYNTRANS_INSTR(xor_u32_u32_immu32);
 	DECLARE_DYNTRANS_INSTR(xor_u32_u32_u32);
 	DECLARE_DYNTRANS_INSTR(xor_u64_u64_immu32);
+	DECLARE_DYNTRANS_INSTR(xor_u64_u64_u64);
 	
 	// Shifts, rotates.
 	DECLARE_DYNTRANS_INSTR(shift_left_u64_u64_imm5_truncS32);
